blog/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: community
  labels:
    istio-injection: enabled
