blog/app_v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-v3
  namespace: community
  labels:
    app: blog
    version: v3
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: blog
      version: v3
  template:
    metadata:
      labels:
        app: blog
        component: blog
        version: v3
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: blog
          image: gasparbarancelli/blog:0.0.3-SNAPSHOT
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 2
          resources:
            requests:
              memory: "300Mi"
              cpu: "400m"
            limits:
              memory: "700Mi"
              cpu: "600m"
          ports:
            - containerPort: 8080
